Revert "fixed a  bug in the style.css file where a scroll bar appeared on the right side of the page when the message was too long"
This reverts commit f1f8bc8fb3b9f44543a95c8d1b98db70ea22ad05.

--- a/templates/style.css
+++ b/templates/style.css
@@ -1,17 +1,15 @@
 body {
     margin: 0;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
 }
 .messages-container {
     flex: 1;
     overflow-y: auto;
     padding-bottom: 50px;
-    height: calc(100vh - 200px);
+    height: calc(100vh - 250px);
     border-bottom: solid 1px lightgray;
-    max-height: calc(100vh - 250px);
 }
 .message pre {
     background-color: #f6f8fa;
